<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_screen_orientation_titles"
        android:entryValues="@array/pref_screen_orientation_values"
        android:key="screen_orientation"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_screen_orientation" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="rotation_gestures"
        android:title="@string/pref_rotation_gestures"
        />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="crosshair"
        android:title="@string/pref_show_crosshair"
        android:summary="@string/pref_show_crosshair_summary"
        />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_fab_behavior_titles"
        android:entryValues="@array/pref_fab_behavior_values"
        android:key="fab_behavior"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_fab_behavior"
        >

    </ListPreference>
</PreferenceScreen>
